2004-08-25  Don Porter  <dgp@users.sourceforge.net>

	* macosx/tkMacOSXWm.c:	Made use of Tcl_WrongNumArgs in a few
	* win/tkWinMenu.c:	appropriate spots.

2004-08-22  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/SetOptions.3, doc/SetClassProcs.3, doc/MeasureChar.3:
	* doc/GetVRoot.3, doc/GetHWND.3, doc/GetDash.3, doc/GetBitmap.3:
	* doc/FontId.3, doc/CrtItemType.3, doc/ConfigWidg.3, doc/GetCursor.3:
	More doc fixes from Mikhail Kolesnitchenko. [Patch 1013520]

2004-08-20  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/TkInitStubs.3, doc/photo.n, doc/ParseArgv.3, doc/options.n: 
	* doc/keysyms.n, doc/font.n: More doc fixes. [Patch 1012837]

	* doc/place.n, doc/pack.n, doc/grid.n, doc/getOpenFile.n:
	* doc/event.n, doc/chooseDirectory.n, doc/bind.n:
	Spelling and grammar fixes from Mikhail Kolesnitchenko. [Patch 1012083]

	* tests/canvas.test (canvas-17.1): Report the result of the test
	so that it can be compared. [Bug 1012331]

2004-08-19  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinDialog.c (Tk_MessageBoxObjCmd): Inherit the icon from
	* win/tkWinInt.h:                          the -parent window for
	* win/tkWinWm.c (TkWinGetIcon):            the MessageBox.

2004-08-19  Joe English  <jenglish@users.sourceforge.net>

	* unix/tkUnixWm.c:  Cast argument 7 of XChangeProperty to
	'const unsigned char *' (from 'const char *') to satisfy
	Solaris 8 Forte C compiler [Bug #1012325]

2004-08-19  Don Porter  <dgp@users.sourceforge.net>

	* tests/safe.test (safe-1.3):  Made test less sensitve to the
	full set of existing aliases in an interp, so the it only tests
	whether the tested ones are present.

	* unix/Makefile.in:	Copied LD_LIBRARY_PATH machinery from
	`make shell` target to other similar targets so that just built
	libraries are tested, rather than previous installations.

2004-08-19  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	TIP#168 IMPLEMENTATION

	* generic/tkTrig.c (TkMakeRawCurve, TkMakeRawCurvePostscript):